prevent horizontal scrollbar on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,7 @@ body {
   padding: 0;
   margin: 0;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 body,
